panel open / close spacing fixed

--- a/app/assets/stylesheets/components/panel.scss
+++ b/app/assets/stylesheets/components/panel.scss
@@ -35,3 +35,9 @@
 .panel {
 	margin: 15px 0;
 }
+.panel-open {
+	margin-bottom: 5px;
+}
+.panel-closed {
+	margin-bottom: 14px;
+}
